z-index fix

--- a/media/assets/css/game-preferences.css
+++ b/media/assets/css/game-preferences.css
@@ -21,6 +21,11 @@
     background: rgb(39,56,76);
 }
 
+.dices-panel {
+    position: fixed;
+    z-index: 400;
+}
+
 #dices-panel-content,
 #config-panel {
     overflow: auto;
@@ -31,6 +36,7 @@
     transform: translateX(-50%);
     max-height: 60%;
     max-width: 600px;
+    
 }
 
 #dices-panel-content
